--- a/examples/2.effect.html
+++ b/examples/2.effect.html
@@ -12,12 +12,16 @@
     let {reactive, effect} = vueReactivity;
     let state = reactive({name: '张三', age: 14})
     effect(()=>{
-      console.log(122)
+      state.name;
+      state.age;
       // document.getElementById('app').innerHTML = state.name + state.age;
     })
-    setTimeout(() => {
-      state.name = '李四';
-    }, 1000);
+    effect(()=>{
+      state.age;
+    })
+    // setTimeout(() => {
+    //   state.name = '李四';
+    // }, 1000);
 
   </script>
 </body>
