--- a/examples/7.runtimeDom.html
+++ b/examples/7.runtimeDom.html
@@ -6,9 +6,16 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="app"></div>
   <script src="../packages/runtime-dom/dist/runtime-dom.global.js"></script>
   <script>
-    console.log(vueRuntimeDom.renderOptionDom);
+    let { createApp } = vueRuntimeDom;
+    let App = {
+      render() {
+        console.log(100)
+      }
+    }
+    createApp(App,{name:"张三",age:10}).mount("#app");
   </script>
 </body>
 </html>
