--- a/examples/7.runtimeDom.html
+++ b/examples/7.runtimeDom.html
@@ -9,14 +9,14 @@
   <div id="app"></div>
   <script src="../packages/runtime-dom/dist/runtime-dom.global.js"></script>
   <script>
-    let { createApp } = vueRuntimeDom;
+    let { createApp, h } = vueRuntimeDom;
     let App = {
       setup(props, context) {
         console.log('setup')
       },
       render(proxy) {
         // console.log(this, proxy, 100)
-        h('div', {}, hello)
+        return h('div', {style: {color: 'red'}}, 'hello');
       }
     }
     createApp(App,{name:"张三",age:10}).mount("#app");
